--- a/style.css
+++ b/style.css
@@ -21,8 +21,17 @@ body {
 }
 
 .estudante-ícone {
-    width: 25px;
+    width: 40px;
     padding: 4px 8px;
+}
+
+h1, h2, h3 {
+    color: #3771ed;
+    font-weight: 700;
+}
+
+a:hover {
+    color: red;
 }
 
 footer {
@@ -31,5 +40,6 @@ footer {
 
 .rodape {
     background-color: #000000;
+    color: white;
     text-align: center;
 }
