--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ body {
     width: 30%;       /* cuidado com SEU tamanho */
 }
 
-.estudante-icone {
+.estudante-ícone {
     width: 50px;
     padding: 4px 8px;
     list-style-type: none;
